AI and copyright added

--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-07-21}
+\date{2021-07-22}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -1723,6 +1723,20 @@ Janmaat, J., \& Rahimova, N. (2018). Managing drought risk in the Okanagan: A ro
 List all authors in the reference list and only first author in the in-text citations.
 
 Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahmadabadi, H., Brooks, D. E., Lange, D., \& Kizhakkedathu, J. N. (2018). Polymer-nanoparticle interaction as a design principle in the development of a durable ultrathin universal binary antibiofilm coating with long-term activity. \emph{ACS Nano}, \emph{12}(12), 11881-11891. \url{https://doi.org/10.1021/acsnano.8b05512}
+
+\hypertarget{academic-integrity}{%
+\chapter{Academic Integrity}\label{academic-integrity}}
+
+Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
+
+Learn more about academic integrity from the \href{https://learningcommons.ubc.ca/resource-guides/understand-academic-integrity/}{UBC Learning Commons}.
+
+\hypertarget{copyright-1}{%
+\chapter{Copyright}\label{copyright-1}}
+
+Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
+
+Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/resource-guides/respect-copyright/}{UBC Learning Commons}.
 
 \hypertarget{part-glossary}{%
 \part*{Glossary}\label{part-glossary}}
